switch to quarkus/picocli/jline